fixbug: file upload

--- a/dashboard/src/locales/en.json
+++ b/dashboard/src/locales/en.json
@@ -44,5 +44,26 @@
   "operation": "Operation",
   "language": "Language",
   "chinese": "Chinese",
-  "english": "English"
+  "english": "English",
+  "clear_form": "Clear Form",
+  "form_cleared": "Form cleared successfully",
+  "insert_success": "inserted successfully",
+  "insert_failed": "Insert failed",
+  "second": "seconds",
+  "skip_invalid_json_line": "Skipped invalid JSON line",
+  "no_valid_data_to_insert": "No valid data to insert",
+  "batch_insert_success": "Batch insert successful",
+  "batch_insert_failed": "Batch insert failed",
+  "optional": " (optional)",
+  "url": " URL",
+  "info": " Information",
+  "json_format": " (JSON format)",
+  "load_sample": "Load Sample",
+  "insert_stats": "Insert Statistics",
+  "inserted_data_count": "Inserted data count",
+  "data_format_description": "Data Format Description",
+  "single_data_format": "Single data format",
+  "batch_data_format": "Batch data format",
+  "note": "Note",
+  "at_least_one_type_of_content_is_required": "At least one type of content is required"
 } 
