--- a/dashboard/src/locales/zh.json
+++ b/dashboard/src/locales/zh.json
@@ -44,5 +44,26 @@
   "operation": "操作",
   "language": "语言",
   "chinese": "中文",
-  "english": "英文"
+  "english": "英文",
+  "clear_form": "清空表单",
+  "form_cleared": "表单已清空",
+  "insert_success": "插入成功",
+  "insert_failed": "插入失败",
+  "second": "秒",
+  "skip_invalid_json_line": "跳过无效的JSON行",
+  "no_valid_data_to_insert": "没有有效数据可插入",
+  "batch_insert_success": "批量插入成功",
+  "batch_insert_failed": "批量插入失败",
+  "optional": "（可选）",
+  "url": "地址",
+  "info": "信息",
+  "json_format": "（JSON格式）",
+  "load_sample": "加载示例",
+  "insert_stats": "插入统计",
+  "inserted_data_count": "已插入数据数量",
+  "data_format_description": "数据格式说明",
+  "single_data_format": "单条数据格式",
+  "batch_data_format": "批量数据格式",
+  "note": "注意",
+  "at_least_one_type_of_content_is_required": "至少需要一种类型的内容"
 } 
