api add async insert and async batch insert

--- a/dashboard/src/locales/en.json
+++ b/dashboard/src/locales/en.json
@@ -65,5 +65,42 @@
   "single_data_format": "Single data format",
   "batch_data_format": "Batch data format",
   "note": "Note",
-  "at_least_one_type_of_content_is_required": "At least one type of content is required"
+  "at_least_one_type_of_content_is_required": "At least one type of content is required",
+  
+  "async_single_insert": "Async Single Insert",
+  "async_batch_insert": "Async Batch Insert",
+  "task_management": "Task Management",
+  "async_insert_info": "Async Insert Information",
+  "async_insert_description": "Create an asynchronous task for data insertion. The task will be processed in the background and you can monitor its progress.",
+  "async_batch_insert_info": "Async Batch Insert Information",
+  "async_batch_insert_description": "Create an asynchronous task for batch data insertion. The task will be processed in the background and you can monitor its progress.",
+  "create_async_task": "Create Async Task",
+  "create_async_batch_task": "Create Async Batch Task",
+  "async_task_created": "Async task created",
+  "async_batch_task_created": "Async batch task created",
+  "async_insert_failed": "Async insert failed",
+  "async_batch_insert_failed": "Async batch insert failed",
+  "task_completed": "Task completed",
+  "task_failed": "Task failed",
+  "monitoring_tasks": "Monitoring Tasks",
+  "task_details": "Task Details",
+  "task_id": "Task ID",
+  "progress": "Progress",
+  "message": "Message",
+  "created_at": "Created At",
+  "started_at": "Started At",
+  "completed_at": "Completed At",
+  "duration": "Duration",
+  "actions": "Actions",
+  "result": "Result",
+  "view_result": "View Result",
+  "details": "Details",
+  "close": "Close",
+  "pending": "Pending",
+  "processing": "Processing",
+  "completed": "Completed",
+  "failed": "Failed",
+  "active_tasks": "Active Tasks",
+  "completed_tasks": "Completed Tasks",
+  "pending_tasks": "Pending Tasks"
 } 
