--- a/dashboard/src/locales/zh.json
+++ b/dashboard/src/locales/zh.json
@@ -65,5 +65,42 @@
   "single_data_format": "单条数据格式",
   "batch_data_format": "批量数据格式",
   "note": "注意",
-  "at_least_one_type_of_content_is_required": "至少需要一种类型的内容"
+  "at_least_one_type_of_content_is_required": "至少需要一种类型的内容",
+  
+  "async_single_insert": "异步单条插入",
+  "async_batch_insert": "异步批量插入",
+  "task_management": "任务管理",
+  "async_insert_info": "异步插入信息",
+  "async_insert_description": "创建异步数据插入任务。任务将在后台处理，您可以监控其进度。",
+  "async_batch_insert_info": "异步批量插入信息",
+  "async_batch_insert_description": "创建异步批量数据插入任务。任务将在后台处理，您可以监控其进度。",
+  "create_async_task": "创建异步任务",
+  "create_async_batch_task": "创建异步批量任务",
+  "async_task_created": "异步任务已创建",
+  "async_batch_task_created": "异步批量任务已创建",
+  "async_insert_failed": "异步插入失败",
+  "async_batch_insert_failed": "异步批量插入失败",
+  "task_completed": "任务完成",
+  "task_failed": "任务失败",
+  "monitoring_tasks": "监控中的任务",
+  "task_details": "任务详情",
+  "task_id": "任务ID",
+  "progress": "进度",
+  "message": "消息",
+  "created_at": "创建时间",
+  "started_at": "开始时间",
+  "completed_at": "完成时间",
+  "duration": "持续时间",
+  "actions": "操作",
+  "result": "结果",
+  "view_result": "查看结果",
+  "details": "详情",
+  "close": "关闭",
+  "pending": "等待中",
+  "processing": "处理中",
+  "completed": "已完成",
+  "failed": "失败",
+  "active_tasks": "活动任务",
+  "completed_tasks": "已完成任务",
+  "pending_tasks": "等待任务"
 } 
