--- a/dashboard/src/locales/en.json
+++ b/dashboard/src/locales/en.json
@@ -102,5 +102,27 @@
   "failed": "Failed",
   "active_tasks": "Active Tasks",
   "completed_tasks": "Completed Tasks",
-  "pending_tasks": "Pending Tasks"
+  "pending_tasks": "Pending Tasks",
+  
+  "api_keys": "API Keys",
+  "api_key_management": "API Key Management",
+  "create_api_key": "Create API Key",
+  "api_key_name": "API Key Name",
+  "api_key_name_required": "API key name is required",
+  "enter_api_key_name": "Enter API key name",
+  "expiration_days": "Expiration Days",
+  "leave_empty_for_permanent": "Leave empty for permanent",
+  "delete_api_key_confirm": "Are you sure you want to delete this API key?",
+  "api_key_info": "API Key Information",
+  "api_key_description": "API keys allow you to access the API programmatically. Keep your keys secure and never share them publicly.",
+  "usage_examples": "Usage Examples",
+  "curl_example": "cURL Example",
+  "python_example": "Python Example",
+  "javascript_example": "JavaScript Example",
+  "never": "Never",
+  "yes": "Yes",
+  "no": "No",
+  "create": "Create",
+  "cancel": "Cancel",
+  "delete": "Delete"
 } 
